feat: update manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Copenhagen",
-  "author": "Zendesk",
-  "version": "4.2.4",
+  "name": "VADAVO Zendesk Theme",
+  "author": "ZD Development Group (https://zdgroup.dev)",
+  "version": "0.1.0",
   "api_version": 4,
-  "default_locale": "en-us",
+  "default_locale": "es-es",
   "settings": [
     {
       "label": "colors_group_label",
