--- a/manifest.json
+++ b/manifest.json
@@ -214,6 +214,12 @@
       "label": "brand_group_label",
       "variables": [
         {
+          "identifier": "highlight",
+          "type": "file",
+          "description": "highlight_description",
+          "label": "highlight_label"
+        },
+        {
           "identifier": "logo",
           "type": "file",
           "description": "logo_description",
